// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paper should render 1`] = `
<DocumentFragment>
  .c0 {
  padding: 0.5rem 0.5rem;
  text-align: start;
  background: #fff;
  border-radius: 4px;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
  color: #000;
  width: 100%;
  height: 100%;
}

<div
    class="c0"
    color="#000"
    height="100"
    width="100"
  />
</DocumentFragment>
`;

exports[`Paper should render with squared borders 1`] = `
<DocumentFragment>
  .c0 {
  padding: 0.5rem 0.5rem;
  text-align: start;
  background: #fff;
  border-radius: 0px;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
  color: #000;
  width: 100%;
  height: 100%;
}

<div
    class="c0"
    color="#000"
    height="100"
    width="100"
  />
</DocumentFragment>
`;
